Changes from server conf files

--- a/file/stack/drupal/.dm/templates/webserver.apache2.default.conf
+++ b/file/stack/drupal/.dm/templates/webserver.apache2.default.conf
@@ -32,7 +32,7 @@
   # MUY IMPORTANTE para Drupal si está detrás de un proxy SSL como Traefik
   SetEnvIf X-Forwarded-Proto https HTTPS=on
 
-  <Directory "((appsetting.service.www.target))((appsetting.service.www.webserver_docroot))" >
+  <Directory "((appsetting.service.www.target))((appsetting.service.www.webserver_docroot))/" >
     Options Indexes FollowSymLinks MultiViews
     AllowOverride All
     Require all granted
