--- a/file/stack/drupal.headless/.dm/templates/webserver.nginx.default.conf
+++ b/file/stack/drupal.headless/.dm/templates/webserver.nginx.default.conf
@@ -4,7 +4,7 @@
 server {
 
     listen 0.0.0.0:80;
-    root /var/www/html((appsetting.service.www.webserver_docroot));
+    root ((appsetting.service.www.target))((appsetting.service.www.webserver_docroot));
     index index.php index.html index.htm;
     port_in_redirect off;
 
