Changes from drush

--- a/config/proc/drush.yml
+++ b/config/proc/drush.yml
@@ -9,7 +9,7 @@ task:
   complete: [ cr, uli ]
   require:
     config:
-      - .*(\.local|\.dev|\.test|\.pre) origin
+      - .*(\.local|\.dev|\.test|\.pre|\.stage) origin
     args:
       command:
         required: false
