--- a/config/proc/db.import.yml
+++ b/config/proc/db.import.yml
@@ -23,6 +23,7 @@ task:
     -
       call: dm.makeDbImport
       args:
+        env_key: (({origin}._env))
         from_service: (({origin}._parent_key))-db
         base_image: (({origin}.appsetting.service.db.base_image))
         host: (({origin}.appsetting.service.db.host.sv))
