--- a/config/proc/db.export.yml
+++ b/config/proc/db.export.yml
@@ -20,6 +20,7 @@ task:
     -
       call: dm.makeDbExport
       args:
+        env_key: (({origin}._env))
         from_service: (({origin}._parent_key))-db
         base_image: (({origin}.appsetting.service.db.base_image))
         host: (({origin}.appsetting.service.db.host.sv))
