--- a/config/interface.yml
+++ b/config/interface.yml
@@ -87,6 +87,10 @@ dm:
   makeDbExport:
     collection: false
     args:
+      leap_from:
+        required: false
+        type: Object
+        defaultValue: {}
       env_key:
         required: true
         type: String
