--- a/config/@/test/test.drupal.local.yml
+++ b/config/@/test/test.drupal.local.yml
@@ -6,7 +6,8 @@ appsetting:
   key: ((_key))
   root: ((_pwd))
   stack: drupal
-  wildcard_host: ((_key))
+  wildcard_host:
+    - ((_key))
   path:
     backup_db: ((_pwd))/private/db
   service:
@@ -38,13 +39,13 @@ appsetting:
       extra_commands: []
       host:
         sv: ''
-        ui: ((_env))-pma.((appsetting.wildcard_host))
+        ui: ((_env))-pma.((appsetting.wildcard_host.0))
     mailhog:
       base_image: mailhog/mailhog
       extra_commands: []
       host:
         sv: ((_tag))-mailhog
-        ui: ((_env))-mailhog.((appsetting.wildcard_host))
+        ui: ((_env))-mailhog.((appsetting.wildcard_host.0))
     # memcached:
     #   base_image: memcached
     #   extra_commands: []
@@ -62,13 +63,13 @@ appsetting:
       extra_commands: []
       host:
         sv: ((_tag))-solr
-        ui: ((_env))-solr.((appsetting.wildcard_host))
+        ui: ((_env))-solr.((appsetting.wildcard_host.0))
     www:
       base_image: ubuntu:24.04
       extra_commands: []
       host:
         sv: ''
-        ui: ((_env)).((appsetting.wildcard_host))
+        ui: ((_env)).((appsetting.wildcard_host.0))
       # Establece el directorio de origen, desde el cual se monta el volumen. Ej: [ ../ | ../drupal | ../web ]
       source: "../((appsetting.stack))"
       # Establece el directorio de destino en el contenedor. Ej: [ /var/www/html ]
