Changes from profiles and recipes

--- a/config/proc/proxy.up.yml
+++ b/config/proc/proxy.up.yml
@@ -5,6 +5,9 @@
 # :RECIPE
 
 # RECIPE:Modificar y/o crear certificados:
+#
+# - Necesario instalar "jq" y "mkcert" en tu host
+#
 # 1. Modifica el perfil de configuración
 # 2. Accede al root de la aplicación
 # ```console
