--- a/config/@/test/test.drupal.headless.local.yml
+++ b/config/@/test/test.drupal.headless.local.yml
@@ -12,6 +12,7 @@ appsetting:
     backup_db: ((_pwd))/private/db
   service:
     db:
+      leap_from: {}
       base_image: mariadb:11 # [ mariadb:10.3 | mariadb:11 | mysql:8.0.0 ]
       extra_commands: []
       host:
