--- a/config/proc/xdebug.down.yml
+++ b/config/proc/xdebug.down.yml
@@ -7,6 +7,7 @@ task:
       - .*(\.local) origin
   do:
     - { event: 'origin startup' }
-    - { call: exec, args: { cmd: 'docker exec -it (({origin}.appsetting.tag))-www sudo phpdismod xdebug', out: true } }
+    - { call: exec, args: { cmd: 'docker exec -it (({origin}.appsetting.tag))-www sudo phpdismod -s fpm xdebug', out: true } }
+    - { call: exec, args: { cmd: 'docker exec -it (({origin}.appsetting.tag))-www sudo service php(({origin}.appsetting.service.www.php.release))-fpm reload', out: false } }
     - { call: log, args: { message: 'Done!', type: success } }
     - { event: 'origin windup' }
