Changes from Drupal install

--- a/config/@/test/test.drupal.local.yml
+++ b/config/@/test/test.drupal.local.yml
@@ -79,24 +79,13 @@ appsetting:
         ui: ((_env))-sonarqube-db.((appsetting.wildcard_host.0))
     www:
       base_image: ubuntu:24.04
+      target: /opt
       extra_commands: []
       host:
         sv: ''
         ui: ((_env)).((appsetting.wildcard_host.0))
-      # Establece el directorio de origen, desde el cual se monta el volumen. Ej: [ ../ | ../drupal | ../web ]
-      source: "../((appsetting.stack))"
-      # Establece el directorio de destino en el contenedor. Ej: [ /var/www/html ]
-      target: "/var/www/html"
-      # Establece el tipo de servidor web. Ej: [ nginx | apache2 ]
-      webserver: nginx 
-      # Establece el nombre del directorio al que accede las peticiones del servidor web. 
-      # Deja en blanco para no añadir ninguna ruta relativa y que el directorio raíz sea /var/www/html.
-      # Ej: [ /web ]
-      webserver_docroot: "/web"
-      # Pemite compartir aplicación a través de Ngrok.
-      # Ver: https://ngrok.com/docs/guides/developer-preview/getting-started/
-      # Panel de control: https://dashboard.ngrok.com/get-started/setup/linux
-      ngrok:
+      webserver: nginx  # Establece el tipo de servidor web. Ej: [ nginx | apache2 ]
+      ngrok: # Pemite compartir aplicación a través de Ngrok (https://ngrok.com/docs/guides/developer-preview/getting-started/, https://dashboard.ngrok.com/get-started/setup/linux)
         token: ""
       php:
         release: 8.3 # [ 8.1 | 8.3 ]
@@ -104,7 +93,6 @@ appsetting:
         release: 2
       drupal:
         release: ^11 # [ ^10 | ^11 ]
-        target: ((appsetting.stack))
         error_level: verbose
         file_system:
           config_path: ../config
