--- a/config/@/test/test.drupal.headless.local.yml
+++ b/config/@/test/test.drupal.headless.local.yml
@@ -82,7 +82,7 @@ appsetting:
         sv: ((_tag))-www
         ui: ((_env))-drupal.((appsetting.wildcard_host.0))
       # Establece el directorio de origen, desde el cual se monta el volumen. Ej: [ ../ | ../drupal | ../web ]
-      source: "../drupal"
+      source: "../"
       # Establece el directorio de destino en el contenedor. Ej: [ /var/www/html ]
       target: "/var/www/html"
       # Establece el tipo de servidor web. Ej: [ nginx | apache2 ]
@@ -90,7 +90,7 @@ appsetting:
       # Establece el nombre del directorio al que accede las peticiones del servidor web. 
       # Deja en blanco para no añadir ninguna ruta relativa y que el directorio raíz sea /var/www/html.
       # Ej: [ /web ]
-      webserver_docroot: "/web"
+      webserver_docroot: "/((appsetting.stack))/web"
       # Pemite compartir aplicación a través de Ngrok.
       # Ver: https://ngrok.com/docs/guides/developer-preview/getting-started/
       # Panel de control: https://dashboard.ngrok.com/get-started/setup/linux
