--- a/config/proc/make.stack.drupal.basic.yml
+++ b/config/proc/make.stack.drupal.basic.yml
@@ -23,6 +23,10 @@ task:
   do:
     - { event: 'origin startup' }
 
+    - call: dm.makeDrupal
+
+    - call: exit 
+
     # Levanta servicios
     -
       label: Apagando servicios
