--- a/config/proc/db.import.yml
+++ b/config/proc/db.import.yml
@@ -15,14 +15,15 @@ task:
       file:
         type: String
         default: 
-      drop:
-        type: Boolean
-        default: false
+      # drop:
+      #   type: Boolean
+      #   default: false
   do:
     - { event: 'origin startup' }
     -
       call: dm.makeDbImport
       args:
+        leap_from: (({origin}.appsetting.service.db.leap_from))
         env_key: (({origin}._env))
         from_service: (({origin}._parent_key))-db
         base_image: (({origin}.appsetting.service.db.base_image))
