Changes from service.www.dm and service.www

--- a/file/stack/drupal/.dm/templates/docker-compose/service.www.dm.yml
+++ b/file/stack/drupal/.dm/templates/docker-compose/service.www.dm.yml
@@ -22,6 +22,16 @@ www:
       source: ../
       target: ${APPSETTING_SERVICE_WWW_TARGET}
       type: bind
+    -
+      consistency: cached
+      source: /home/${APPSETTING_USER}/.gitconfig
+      target: /home/${APPSETTING_USER}/.gitconfig
+      type: bind
+    -
+      consistency: cached
+      source: /home/${APPSETTING_USER}/.git-credentials
+      target: /home/${APPSETTING_USER}/.git-credentials
+      type: bind
   healthcheck:
     interval: 1s
     retries: 120
