--- a/config/proc/sync.yml
+++ b/config/proc/sync.yml
@@ -1,4 +1,4 @@
-help: Sincroniza
+help: Sincroniza ficheros
 example:
 - (({}.tmp.proc.sig))
 
@@ -11,14 +11,6 @@ task:
         type: String
         required: true
         default: callback::dm.getEnvKeys
-      source_path:
-        type: String
-        required: false
-        default:
-      target_path:
-        type: String
-        required: false
-        default: 
     opt:
       dry-run:
         type: Boolean
@@ -29,10 +21,5 @@ task:
     settings: {}
   do:
     - { event: 'origin startup' }
-    -
-      call: dm.makeSync
-      args:
-        env_key: (({}.args.env_key))
-        source_path: (({}.args.source_path))
-        target_path: (({}.args.target_path))
+    - { call: dm.makeSync, args: { env_key: "(({}.args.env_key))" } }
     - { event: 'origin windup' }
