Support xdebug cli

--- a/config/proc/xdebug.up.yml
+++ b/config/proc/xdebug.up.yml
@@ -8,6 +8,8 @@ task:
   do:
     - { event: 'origin startup' }
     - { call: exec, args: { cmd: 'docker exec -it (({origin}.appsetting.tag))-www sudo phpenmod -s fpm xdebug', out: true } }
+    - { call: exec, args: { cmd: 'docker exec -it (({origin}.appsetting.tag))-www sudo phpenmod -s cli xdebug', out: true } }
     - { call: exec, args: { cmd: 'docker exec -it (({origin}.appsetting.tag))-www sudo service php(({origin}.appsetting.service.www.php.release))-fpm reload', out: false } }
+    - { call: exec, args: { cmd: 'docker exec -it (({origin}.appsetting.tag))-www sudo service php(({origin}.appsetting.service.www.php.release))-cli reload', out: false } }
     - { call: log, args: { message: 'Done!', type: success } }
     - { event: 'origin windup' }
