--- a/file/stack/drupal/.dm/templates/php-fpm.ini.conf
+++ b/file/stack/drupal/.dm/templates/php-fpm.ini.conf
@@ -2,6 +2,7 @@
 xdebug.mode=debug
 xdebug.client_host=host.docker.internal
 xdebug.start_with_request=yes
+xdebug.log_level=0
 error_reporting=E_ALL
 display_errors = Off
 memory_limit = 2G
