--- a/config/proc/drush.yml
+++ b/config/proc/drush.yml
@@ -25,6 +25,6 @@ task:
     -
       call: exec
       args:
-        cmd: (({}.exec)) (({origin}._config_name)) exec vendor/bin/drush (({}.var.command))
+        cmd: (({}.exec)) (({origin}._config_name)) exec (({origin}.appsetting.service.www.drupal.workdir))/vendor/bin/drush (({}.var.command))
         out: true
     - { event: 'origin windup' }
