--- a/file/stack/drupal/.dm/templates/docker-compose/service.www.dm.yml
+++ b/file/stack/drupal/.dm/templates/docker-compose/service.www.dm.yml
@@ -15,7 +15,7 @@ www:
   env_file:
     - ../.env
     - .env
-  working_dir: ${APPSETTING_SERVICE_WWW_TARGET}/drupal
+  working_dir: ${APPSETTING_SERVICE_WWW_DRUPAL_WORKDIR}
   volumes:
     - 
       consistency: cached
