Changes from db.clean, db.import, db.sync

--- a/config/interface.yml
+++ b/config/interface.yml
@@ -82,6 +82,10 @@ dm:
   makeDbClean:
     collection: false
     args:
+      leap_from:
+        required: false
+        type: Object
+        defaultValue: {}
       from_service:
         required: true
         type: String
