--- a/config/proc/db.clean.yml
+++ b/config/proc/db.clean.yml
@@ -1,4 +1,4 @@
-help: Limpia de tablas la base de datos
+help: Elimina tablas de base de datos
 example:
 - (({}.tmp.proc.sig))
 
@@ -9,9 +9,17 @@ task:
     opt: {}
   do:
     - { event: 'origin startup' }
+    - call: dm.checkEnv
+      args:
+        type: exec
+        source_env: (({origin}._env))
+        source_extra_info: "{(({origin}.appsetting.service.db.host.sv))/(({origin}.appsetting.service.db.name))}"
+        target_env: (({origin}._env))
+        target_extra_info: "{(({origin}.appsetting.service.db.host.sv))/(({origin}.appsetting.service.db.name))}"
     -
       call: dm.makeDbClean
       args:
+        leap_from: (({origin}.appsetting.service.db.leap_from))
         from_service: (({origin}._parent_key))-db
         base_image: (({origin}.appsetting.service.db.base_image))
         host: (({origin}.appsetting.service.db.host.sv))
