Support new db.sync

--- a/config/interface.yml
+++ b/config/interface.yml
@@ -235,6 +235,13 @@ dm:
         required: true
         type: String
         defaultValue:
+  makeDbSync:
+    collection: false
+    args:
+      env_key:
+        required: true
+        type: String
+        defaultValue:
   makeExec:
     collection: false
     args:
