Estable db.sync

--- a/config/proc/db.export.yml
+++ b/config/proc/db.export.yml
@@ -1,8 +1,6 @@
 help: Exporta base de datos
 example:
-- (({}.tmp.proc.sig))
-- (({}.tmp.proc.sig)) --tag test
-- (({}.tmp.proc.sig)) --lock-tables
+- (({}.tmp.proc.sig)) --tag drupal10 --lock
 
 task:
   require:
@@ -21,7 +19,7 @@ task:
       call: dm.makeDbExport
       args:
         leap_from: (({origin}.appsetting.service.db.leap_from))
-        env_key: (({origin}._env))
+        env_key: (({origin}._config_name))
         from_service: (({origin}._parent_key))-db
         base_image: (({origin}.appsetting.service.db.base_image))
         host: (({origin}.appsetting.service.db.host.sv))
