Cambios en proc db.ls.., log, ps, trace

--- a/config/interface.yml
+++ b/config/interface.yml
@@ -299,7 +299,7 @@ dm:
         type: Object
         defaultValue: {}
       # Nombre del log a mostrar
-      name: 
+      type: 
         required: false
         type: String
         defaultValue: ""
