--- a/config/proc/db.ls.proc.yml
+++ b/config/proc/db.ls.proc.yml
@@ -1,9 +1,7 @@
-### db.ls.conf
-
-```yml
 help: Muestra configuración de base de datos
 example:
 - (({}.tmp.proc.sig))
+
 task:
   require:
     config:
@@ -40,14 +38,12 @@ task:
     # ========
     # hook:
     #   call:
-    #     dm.db.ls.conf:
+    #     dm.db.ls.proc:
     #       exec: ((server_access))
     -
       call: exec
       args:
         message: ""
-        cmd: (({}.var.signature)) -B -e "SHOW variables"
+        cmd: watch -n 0.5 "(({}.var.signature)) -B -e \"SHOW FULL PROCESSLIST\""
         out: true
     - { event: 'origin windup' }
-```
-[```config/proc/db.ls.conf.yml```](../config/proc/db.ls.conf.yml)
