--- a/config/proc/ps.yml
+++ b/config/proc/ps.yml
@@ -22,7 +22,7 @@ task:
           -
             call: exec
             args:
-              cmd: docker ps -a --filter name=^/(({}.args.filter))
+              cmd: docker ps --filter name=^/(({}.args.filter))
               out: true  
         false:
           -
