--- a/config/proc/trace.yml
+++ b/config/proc/trace.yml
@@ -50,8 +50,9 @@ task:
   require:
     config:
       - .*(\.local|\.dev|\.test|\.pre|\.stage|\.prod) origin
-    opt:
-      name:
+    args:
+      type:
+        required: false
         type: String
         default:
   do:
@@ -59,6 +60,6 @@ task:
     -
       call: dm.makeTrace
       args:
-        name: (({}.opt.name))
+        type: (({}.args.type))
     - { event: 'origin windup' }
     
