--- a/config/@/test/test.drupal.local.yml
+++ b/config/@/test/test.drupal.local.yml
@@ -100,7 +100,7 @@ hook:
   event:
     # --------------------------------------------------------
     # - Make Drupal -
-    #   way @funely.local make.stack.drupal.basic -fyv
+    #   way @test.drupal.local make.stack.drupal.basic -fyv
     # --------------------------------------------------------
     dm.make.drupal:
       startup:
