Changes from dm.aws.s3.ls

--- a/config/proc/aws/s3.ls.yml
+++ b/config/proc/aws/s3.ls.yml
@@ -12,10 +12,10 @@ task:
       args:
         cmd: >
           docker exec
-          -e AWS_ACCESS_KEY_ID="(({origin}.aws.access_key))"
-          -e AWS_SECRET_ACCESS_KEY="(({origin}.aws.secret_key))"
-          -e AWS_DEFAULT_REGION="(({origin}.aws.region))"
+          -e AWS_ACCESS_KEY_ID="(({origin}.appsetting.aws.access_key))"
+          -e AWS_SECRET_ACCESS_KEY="(({origin}.appsetting.aws.secret_key))"
+          -e AWS_DEFAULT_REGION="(({origin}.appsetting.aws.region))"
           -it (({origin}.appsetting.service.www.host))
-          aws s3 ls s3://(({origin}.aws.bucket)) --recursive
+          aws s3 ls s3://(({origin}.appsetting.aws.bucket)) --recursive
         out: true
     - { event: 'origin windup' }
